* Reinitialize global locks after a fork (at least those in the Application   Kit). * This should fix #5668.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@42982 a95241bf-73f2-0310-859d-f6bbb57e9c96